--- a/plugins/Preview/Preview_9.vcproj
+++ b/plugins/Preview/Preview_9.vcproj
@@ -59,6 +59,7 @@
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
+				EnableFunctionLevelLinking="true"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
@@ -85,6 +86,7 @@
 				ModuleDefinitionFile=".\Preview.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -174,6 +176,7 @@
 				ModuleDefinitionFile=".\Preview.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -267,6 +270,7 @@
 				IgnoreImportLibrary="true"
 				ModuleDefinitionFile=".\Preview.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -358,6 +362,7 @@
 				IgnoreImportLibrary="true"
 				ModuleDefinitionFile=".\Preview.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
