--- a/plugins/RazaWebHook/RazaWebHook32_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook32_9.vcproj
@@ -84,6 +84,7 @@
 				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -172,6 +173,7 @@
 				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -264,6 +266,7 @@
 				LinkIncremental="1"
 				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -358,6 +361,7 @@
 				LinkIncremental="1"
 				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
