--- a/plugins/RazaWebHook/RazaWebHook64_9.vcproj
+++ b/plugins/RazaWebHook/RazaWebHook64_9.vcproj
@@ -84,6 +84,7 @@
 				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -148,6 +149,7 @@
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
+				EnableFunctionLevelLinking="true"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
@@ -172,6 +174,7 @@
 				ModuleDefinitionFile="RazaWebHook.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -263,6 +266,7 @@
 				LinkIncremental="1"
 				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -358,6 +362,7 @@
 				LinkIncremental="1"
 				ModuleDefinitionFile="RazaWebHook.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
