--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -86,6 +86,7 @@
 				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -172,6 +173,7 @@
 				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -261,6 +263,7 @@
 				IgnoreDefaultLibraryNames=""
 				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -354,6 +357,7 @@
 				IgnoreDefaultLibraryNames=""
 				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
