--- a/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
+++ b/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
@@ -89,6 +89,7 @@
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				BaseAddress="0x16800000"
 				TargetMachine="1"
 			/>
@@ -186,6 +187,7 @@
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -285,6 +287,7 @@
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -390,6 +393,7 @@
 				ModuleDefinitionFile="$(ProjectName).def"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
