--- a/plugins/DocumentReader/DocumentReader_9.vcproj
+++ b/plugins/DocumentReader/DocumentReader_9.vcproj
@@ -85,6 +85,7 @@
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
 				ModuleDefinitionFile="DocumentReader.def"
 				GenerateDebugInformation="true"
+				LargeAddressAware="2"
 				BaseAddress="0x22000000"
 				TargetMachine="1"
 			/>
@@ -178,6 +179,7 @@
 				AdditionalLibraryDirectories="..\..\shareaza\zlib"
 				ModuleDefinitionFile="DocumentReader.def"
 				GenerateDebugInformation="true"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -276,6 +278,7 @@
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="DocumentReader.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -380,6 +383,7 @@
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile="DocumentReader.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
