--- a/plugins/GFLLibraryBuilder/GFLLibraryBuilder_9.vcproj
+++ b/plugins/GFLLibraryBuilder/GFLLibraryBuilder_9.vcproj
@@ -91,6 +91,7 @@
 				ModuleDefinitionFile="GFLLibraryBuilder.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				BaseAddress="0x1af80000"
 				TargetMachine="1"
 			/>
@@ -189,6 +190,7 @@
 				ModuleDefinitionFile="GFLLibraryBuilder.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -291,6 +293,7 @@
 				ModuleDefinitionFile="GFLLibraryBuilder.def"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -399,6 +402,7 @@
 				ModuleDefinitionFile="GFLLibraryBuilder.def"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
