--- a/plugins/SWFPlugin/SWFPlugin_9.vcproj
+++ b/plugins/SWFPlugin/SWFPlugin_9.vcproj
@@ -87,6 +87,7 @@
 				ModuleDefinitionFile="SWFPlugin.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				BaseAddress="0x1af20000"
 				TargetMachine="1"
 			/>
@@ -181,6 +182,7 @@
 				ModuleDefinitionFile="SWFPlugin.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LargeAddressAware="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -278,6 +280,7 @@
 				ModuleDefinitionFile="SWFPlugin.def"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
@@ -379,6 +382,7 @@
 				LinkIncremental="1"
 				ModuleDefinitionFile="SWFPlugin.def"
 				SubSystem="2"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
