--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -415,30 +415,32 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Downloads"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Save &Completed Files Here:",IDC_STATIC,5,5,270,35,WS_GROUP
-    EDITTEXT        IDC_DOWNLOADS_FOLDER,15,19,225,12,ES_AUTOHSCROLL | ES_READONLY
+    GROUPBOX        "Save Completed Files Here",IDC_STATIC,7,7,268,33,WS_GROUP
+    EDITTEXT        IDC_DOWNLOADS_FOLDER,14,19,225,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,245,15,23,20
-    GROUPBOX        "Store Temporary &Incomplete Files Here:",IDC_STATIC,5,45,270,35,WS_GROUP
-    EDITTEXT        IDC_INCOMPLETE_FOLDER,16,59,225,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "",IDC_INCOMPLETE_BROWSE,245,55,23,20
-    GROUPBOX        "&Number of Downloads:",IDC_STATIC,5,86,133,76,WS_GROUP
-    LTEXT           "Maximum Files:",IDC_STATIC,15,102,75,12,SS_CENTERIMAGE
+    GROUPBOX        "Scan every completed file with AntiVirus",IDC_STATIC,7,44,268,34
+    LTEXT           "Select AntiVirus:",IDC_STATIC,14,60,75,8
+    COMBOBOX        IDC_ANTIVIRUS,93,57,175,70,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Number of Downloads",IDC_STATIC,5,83,133,76,WS_GROUP
+    LTEXT           "Maximum Files:",IDC_STATIC,14,103,75,10,SS_CENTERIMAGE
     EDITTEXT        IDC_MAX_FILES,93,102,36,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_MAX_FILES_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,102,8,12
-    LTEXT           "Maximum Transfers:",IDC_STATIC,15,121,76,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_MAX_TRANSFERS,93,121,36,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_MAX_TRANSFERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,121,8,12
-    LTEXT           "Transfers per File:",IDC_STATIC,15,140,75,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_MAX_TPF,93,140,36,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_MAX_TPF_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,140,8,12
-    GROUPBOX        "&Limits:",IDC_STATIC,142,86,133,76,WS_GROUP
-    LTEXT           "Total Download Bandwidth:",IDC_STATIC,150,101,125,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_DOWNLOADS_BANDWIDTH_LIMIT,204,114,60,68,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Maximum Queue Length:",IDC_STATIC,151,130,122,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_DOWNLOADS_QUEUE_LIMIT,204,140,60,65,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,5,170,270,42,WS_GROUP
+    CONTROL         "Spin1",IDC_MAX_FILES_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,101,8,12
+    LTEXT           "Maximum Transfers:",IDC_STATIC,14,120,76,10,SS_CENTERIMAGE
+    EDITTEXT        IDC_MAX_TRANSFERS,93,120,36,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_MAX_TRANSFERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,120,8,12
+    LTEXT           "Transfers per File:",IDC_STATIC,14,138,75,10,SS_CENTERIMAGE
+    EDITTEXT        IDC_MAX_TPF,93,138,36,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_MAX_TPF_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,129,138,8,12
+    GROUPBOX        "Limits",IDC_STATIC,147,83,128,76,WS_GROUP
+    LTEXT           "Total Download Bandwidth:",IDC_STATIC,155,97,110,10,SS_CENTERIMAGE
+    COMBOBOX        IDC_DOWNLOADS_BANDWIDTH_LIMIT,207,111,60,68,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Maximum Queue Length:",IDC_STATIC,155,125,110,10,SS_CENTERIMAGE
+    COMBOBOX        IDC_DOWNLOADS_QUEUE_LIMIT,207,138,60,65,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Only download and upload to networks which are connected.",IDC_REQUIRE_CONNECT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,186,245,15
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,165,268,10
+    GROUPBOX        "Store Temporary Incomplete Files Here",IDC_STATIC,7,180,268,33,WS_GROUP
+    EDITTEXT        IDC_INCOMPLETE_FOLDER,14,193,225,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "",IDC_INCOMPLETE_BROWSE,245,188,23,20
 END
 
 IDD_SETTINGS_GENERAL DIALOGEX 0, 0, 282, 220
