Added protection against query hammering. Isolated packet's debug code from Release build.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8862 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3582,6 +3582,7 @@ END
 
 STRINGTABLE 
 BEGIN
+    IDS_PROTOCOL_EXCESS     "Received a packet from %s which excess query limits, ignoring."
     IDS_PROTOCOL_TOO_LARGE  "Neighbour %s forwarded a packet of excessive size, dropping connection."
     IDS_PROTOCOL_NO_TTL     "Neighbour %s forwarded a packet with zero TTL, ignoring."
     IDS_PROTOCOL_HIGH_TTL   "Neighbour %s forwarded a packet with excessive TTL, dropping packet (TTL=%i, Hops=%i)."
